<resources>
    <string name="app_name">About Kinza Amjad</string>
    <string name="name">Kinza Amjad</string>
    <string name="bio">
        Hello, Iam Kinza Amjad And Sheeraz loves Kinza
        Kinza is so so cute she is my whole life i love her \n\n
        Kinza is so so cute she is my whole life i love her kinza amjad\n
        Kinza is so so cute she is my whole life i love her kinza amjad \n
        Kinza is so so cute she is my whole life i love her kinza amjad\n
        Kinza is so so cute she is my whole life i love her kinza amjad\n
        Kinza is so so cute she is my whole life i love her kinza amjad\n
        Kinza is so so cute she is my whole life i love her kinza amjad\n
        Kinza is so so cute she is my whole life i love her kinza amjad\n
        Kinza is so so cute she is my whole life i love her kinza amjad \n
        Kinza is so so cute she is my whole life i love her kinza amjad\n
        Kinza is so so cute she is my whole life i love her kinza amjad\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
        Kinza is so so cute she is my whole life i love her kinza amjad\\n
    </string>
    <string name="enter_your_hobbies">Enter your hobbies</string>
    <string name="image_description">Chocoalte Kinza is my whole life</string>
    <string name="auto_fill_hints">Chocolate Kinza</string>
    <string name="done">Done</string>
</resources>